prevent line wrapping (due to title) and add ellipsis when needed

--- a/assets/css/glimesh/components/stream.scss
+++ b/assets/css/glimesh/components/stream.scss
@@ -9,6 +9,9 @@
     h5 {
         position: relative;
         top: 6px;
+        overflow:hidden;
+        white-space:nowrap;
+        text-overflow:ellipsis;
     }
 }
 
